# hcc_plan_web_unified

./: .env  .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_guidelines.md  implementation_plan_detailed.md  project_overview.md  project_structure.md  session_handover_phase1_complete.md  session_handover_phase1_start.md  string_formatierung_hinweis_wichtig.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
api/: __init__.py
api/auth/: __init__.py
api/exceptions/: __init__.py
api/middleware/: __init__.py  error_handler.py
api/models/: __init__.py
api/routes/: __init__.py
api/routes/api/: __init__.py
api/routes/web/: __init__.py  pages.py
api/services/: __init__.py
api/utils/: __init__.py  config.py  password.py
data/: .gitkeep
database/: __init__.py  db_setup.py
database/models/: __init__.py
reference/appointment_plan_api_cl/: README.md  main.py  planning.md
reference/appointment_plan_api_cl/api/: __init__.py  templates.py
reference/appointment_plan_api_cl/database/: __init__.py  db_setup.py
reference/appointment_plan_api_cl/scripts/: create_admin.py
reference/appointment_plan_api_cl/templates/: appointment_detail_modal.html  base.html  calendar_partial.html  day_view_modal.html  error.html  error_message.html  index.html  landing_page.html  location_detail.html  locations.html  login_error.html  login_modal.html  person_detail.html  (+5 more)
reference/hcc_plan_api/: README.md  main.py  oauth2_authentication.py  settings.py
scripts/: __init__.py
static/: .gitkeep
static/images/: .gitkeep
static/js/: .gitkeep
templates/: .gitkeep  base.html
templates/components/: .gitkeep
templates/employee/: .gitkeep
tests/: __init__.py
(+104 files in other folders)
